<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bgnew"
    tools:context=".AccountFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <TextView
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:text="@string/your_account_profile"
        android:layout_width="wrap_content"
        android:textStyle="bold"
        android:textSize="18dp"
        android:textColor="@color/white"
        android:layout_height="wrap_content"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_marginTop="46dp"
        android:layout_gravity="center"
        android:id="@+id/profile_image"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:src="@drawable/rahul"
        app:srcCompat="@drawable/rahul"
        app:civ_border_width="5dp"
        app:civ_border_color="@color/white" />

    <TextView
        android:layout_marginTop="12dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rahul_rahmatullah"
        android:textColor="#1F1F1F"
        android:textSize="18dp"/>

    <TextView
        android:layout_marginTop="8dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="+62 83105000088"
        android:textColor="#545454"
        android:textSize="18dp"/>

    <LinearLayout
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
        android:layout_marginTop="23dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_account"
        android:textSize="16dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        />

    <LinearLayout
        android:layout_marginTop="13dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <ImageView
            android:paddingRight="9dp"
            android:src="@drawable/baseline_account_balance_wallet_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <TextView
        android:layout_weight="15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payment_methods"
        android:textSize="14dp"
        android:textColor="#1F1F1F"
        />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_arrow_forward_ios_24"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="13dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <ImageView
            android:paddingRight="9dp"
            android:src="@drawable/baseline_diamond_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_weight="15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rewards_member"
            android:textSize="14dp"
            android:textColor="#1F1F1F"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_arrow_forward_ios_24"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="13dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <ImageView
            android:paddingRight="9dp"
            android:src="@drawable/baseline_account_circle_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_weight="15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_account_profile"
            android:textSize="14dp"
            android:textColor="#1F1F1F"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_arrow_forward_ios_24"/>

    </LinearLayout>

    <TextView
        android:layout_marginTop="23dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/general_settings"
        android:textSize="16dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        />

    <LinearLayout
        android:layout_marginTop="13dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <ImageView
            android:paddingRight="9dp"
            android:src="@drawable/baseline_chat_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_weight="15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/support_center"
            android:textSize="14dp"
            android:textColor="#1F1F1F"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_arrow_forward_ios_24"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="13dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <ImageView
            android:paddingRight="9dp"
            android:src="@drawable/baseline_settings_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_weight="15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_settings"
            android:textSize="14dp"
            android:textColor="#1F1F1F"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_arrow_forward_ios_24"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="13dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <ImageView
            android:paddingRight="9dp"
            android:src="@drawable/baseline_share_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_weight="15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_feedback"
            android:textSize="14dp"
            android:textColor="#1F1F1F"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_arrow_forward_ios_24"/>

    </LinearLayout>

        <LinearLayout
            android:id="@+id/mySensor"
            android:layout_marginTop="13dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <ImageView
                android:paddingRight="9dp"
                android:src="@drawable/baseline_sensors_24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView

                android:layout_weight="15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_sensor"
                android:textSize="14dp"
                android:textColor="#1F1F1F"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_arrow_forward_ios_24"/>

        </LinearLayout>

    </LinearLayout>

    </LinearLayout>

    </ScrollView>

</LinearLayout>

